--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
+    "dotenv": "^6.0.0",
     "express": "^4.14.0",
+    "fs": "^0.0.1-security",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^4.12.1",
